--- a/front-end-angular/src/app/home/home.component.html
+++ b/front-end-angular/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Nom</th>
-                            <th scope="col">Taille</th>
+                            <th scope="col">Taille (octets)</th>
                             <th scope="col">Durée</th>
                             <th scope="col">Qualité</th>
                             <th scope="col">Choisir</th>
